--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ jobs:
   hello_world_job:
     runs-on: ubuntu-latest
     name: A job to say hello
+    permissions:
+      id-token: write
+      contents: read
     steps:
       # To use this repository's private action,
       # you must check out the repository
